# Maven-Bank-System

./: .gitignore  README.md
account-project/: pom.xml
account-project/account-datalayer/: pom.xml
account-project/account-kafka/: pom.xml
account-project/account-kafka/src/main/java/se/liu/ida/tdp024/account/kafka/: KafkaLogProducer.java
account-project/account-logic/: pom.xml
account-project/account-rest/: pom.xml
account-project/account-rest/src/main/java/tdp024/account/rest/application/: AccountService.java  Application.java
account-project/account-rest/src/test/java/tdp024/account/rest/application/: AccountServiceTest.java
account-project/account-util/: pom.xml
account-project/account-util/src/main/java/tdp024/util/api/: AccountJsonSerializer.java  AccountLogger.java  HTTPHelper.java
account-project/account-util/src/main/java/tdp024/util/impl/: AccountJsonSerializerImpl.java  AccountLoggerImpl.java  HTTPHelperImpl.java
account-project/account-xfinal-test/src/main/java/se/liu/ida/tdp024/account/util/logger/: AccountLoggerMonlog.java
account-project/aggregate-report/: pom.xml
bank-service/: README.md  go.mod  server.go
bank-service/data/: banks.json
kafka-test/: docker-compose.yml  docker.md
person-service/: Cargo.toml  README.md
person-service-old/: Cargo.toml  README.md
person-service-old/src/: main.rs
person-service-old/src/data/: persons.json
person-service/src/: app.rs  handler.rs  kafka_logger.rs  lib.rs  main.rs  router.rs
person-service/src/data/: persons.json
(+19 files in other folders)
