[package]
name = "person-service"
version = "0.1.0"
edition = "2024"

[lib]
name = "pkg"
path ="./src/lib.rs"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rdkafka = { version = "0.36", features = ["cmake-build"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
